<resources>
    <string name="app_name">Desafio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeatPassword">Repeat password</string>
    <string name="name">Name</string>
    <string name="register">REGISTER</string>
    <string name="or">OR</string>
    <string name="restaurant_image">Restaurant image</string>

</resources>