<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">


       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/name"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

           <com.google.android.material.textfield.TextInputEditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               />

       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/email"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

           <com.google.android.material.textfield.TextInputEditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               />

       </com.google.android.material.textfield.TextInputLayout>
       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/password"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

           <com.google.android.material.textfield.TextInputEditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               />

       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/repeatPassword"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

           <com.google.android.material.textfield.TextInputEditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               />

       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.button.MaterialButton
           android:id="@+id/btnRegisterResgiter"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:backgroundTint="@color/colorButtonLogin"
           android:textColor="@color/colorWhite"
           app:cornerRadius="10dp"
           android:text="@string/register"/>

   </LinearLayout>

</FrameLayout>