<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginEnd="23dp"
        android:layout_marginStart="24dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLoginLogin"
            android:layout_marginTop="38dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/colorButtonLogin"
            android:textColor="@color/colorWhite"
            app:cornerRadius="10dp"
            android:text="@string/login"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="32dp"
            android:orientation="horizontal" >

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:layout_marginEnd="19dp"
                android:text="@string/or" />


            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />

        </LinearLayout>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegisterLogin"
            android:layout_marginTop="80dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/colorButtonRegister"
            android:textColor="@color/colorWhite"
            app:cornerRadius="10dp"
            android:text="@string/register"/>
    </LinearLayout>

</FrameLayout>